# conforma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  report.json
.github/workflows/: publish.yml
docs/: classification_walkthrough.md  diagnostics.md  no_wrappers.md  regression_walkthrough.md
src/conforma/: __init__.py  calibration.py  classifier.py  core.py  regressor.py
src/conforma/diagnostics/: __init__.py  _common.py  classifier.py  regressor.py
src/conformal/: __init__.py  calibration.py  classifier.py  core.py  diagnostics.py  regressor.py
src/conformal/diagnostics/: __init__.py  _common.py  classifier.py  regressor.py
tests/: __init__.py  conftest.py  test_calibration.py
tests/calibration/: __init__.py  test_calibrate.py  test_calibrate_classifier.py  test_calibrate_regressor.py
tests/classifier/: __init__.py  conftest.py  test_predict.py  test_predict_p_values.py
tests/core/: test_compute_p_values.py
tests/diagnostics/: test_classifier_coverage_stability.py  test_regressor_coverage_stability.py
tests/integration/: __init__.py  test_classification_workflow.py  test_no_wrapper_workflow.py  test_regression_workflow.py
tests/precision/: __init__.py  test_precision_preserved.py
tests/regressor/: __init__.py  conftest.py  test_predict.py
tests/unit/: __init__.py  conftest.py  test_version.py
tests/unit/calibration/: test_calibrate.py  test_calibrate_classifier.py  test_calibrate_regressor.py
tests/unit/classifier/: conftest.py  test_conformal_classifier.py  test_predict.py  test_predict_p_values.py
tests/unit/core/: test_compute_p_values.py
tests/unit/diagnostics/: __init__.py  test_classifier_calibration_plan.py  test_classifier_coverage_stability.py  test_regressor_calibration_plan.py  test_regressor_coverage_stability.py
tests/unit/precision/: __init__.py  test_precision_preserved.py
tests/unit/regressor/: conftest.py  test_conformal_regressor.py  test_predict.py
