[project]
name = "conformal"
version = "0.1.0"
description = "Simple, fast, and decoupled uncertainty quantification for knowing when to trust your model's predictions."
readme = "README.md"
authors = [
    { name = "Rudi Kershaw", email = "alexander_kershaw@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
]
license = { text = "MIT" }
keywords = ["conformal-prediction", "uncertainty", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/rudikershaw/conformal"
Repository = "https://github.com/rudikershaw/conformal"
Issues = "https://github.com/rudikershaw/conformal/issues"

[dependency-groups]
dev = [
    "nox>=2024.4.15",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle (docstrings)
    "T20", # flake8-print
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "S",   # bandit security
    "A",   # flake8-builtins
    "ERA", # eradicate commented-out code
    "PL",  # pylint
]
ignore = [
    "D203",  # Conflicts with D211 (PEP 257: no blank line before class)
    "D213",  # Conflicts with D212 (PEP 257: summary on first line)
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
