[project]
name = "conforma"
version = "0.1.0a1"
description = "Simple, fast, and framework agnostic uncertainty quantification for knowing when to trust your model's predictions."
readme = "README.md"
authors = [
    { name = "Rudi Kershaw", email = "alexander_kershaw@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0,<3.0.0",
]
license = { text = "MIT" }
keywords = ["conformal-prediction", "uncertainty", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/rudikershaw/conforma"
Repository = "https://github.com/rudikershaw/conforma"
Issues = "https://github.com/rudikershaw/conforma/issues"

[dependency-groups]
dev = [
    "nox>=2026.04.10",
    "nox-uv>=0.7.1",
]
lint = [
    "ruff>=0.15.10",
    "mypy>=1.20.0",
]
security = [
    "bandit>=1.9.4",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "pytest-benchmark>=5.1.0",
]
integration = [
    "pytest>=9.0.0",
    "scikit-learn>=1.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--benchmark-storage=reports/.benchmarks"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py"]
data_file = "reports/.coverage"

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 98

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_unimported = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle (docstrings)
    "T20", # flake8-print
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "A",   # flake8-builtins
    "ERA", # eradicate commented-out code
    "PL",  # pylint
]
ignore = [
    "D203",  # Conflicts with D211 (PEP 257: no blank line before class)
    "D213",  # Conflicts with D212 (PEP 257: summary on first line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is the standard way to write tests
    "D",     # test docstrings are descriptive, not API documentation
    "ARG",   # test helpers often match callback signatures without using all args
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
